--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 /* Color Variables */
 :root {
+    font-size: clamp(14px, 2.5vw, 18px);
     --font-sans: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
     --font-mono: 'JetBrains Mono', monospace;
 
@@ -74,7 +75,8 @@ header {
 
 header h1 {
     color: var(--color-primary);
-    margin: 30px 0px;
+    font-size: 2rem;
+    margin: 30px 0;
 }
 
 header p {
@@ -91,8 +93,8 @@ header p {
 .flashcard {
     border-radius: 8px;
     cursor: pointer;
-    width: 600px;
-    height: 300px;
+    width: 700px;
+    height: 400px;
     perspective: 1000px;
     transition: all 0.3s ease;
 }
@@ -125,13 +127,15 @@ header p {
 .flashcard-front {
     background-color: var(--color-background-light);
     color: var(--color-text);
-    font-size: 20px;
+    font-size: 1.1rem;
     transform: rotateY(0deg);
 }
 
 .flashcard-back {
     background-color: var(--color-background-dark);
     color: var(--color-gris);
+    font-size: 0.9rem;
+    text-align: left;
     transform: rotateY(180deg);
 }
 
@@ -154,13 +158,13 @@ header p {
 }
 
 button {
-    padding: 10px 20px;
     background-color: var(--color-primary);
     color: var(--color-white);
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1rem;
+    padding: 10px 20px;
     transition: background-color 0.3s;
 }
 
@@ -173,6 +177,10 @@ button:disabled {
     cursor: not-allowed;
 }
 
+#not-known-btn {
+    background-color: var(--color-gris-clair);
+}
+
 /* Progress Styles */
 .progress-container {
     text-align: center;
@@ -180,7 +188,7 @@ button:disabled {
 }
 
 .progress {
-    font-size: 18px;
+    font-size: 1rem;
     background-color: var(--color-disabled);
     padding: 10px 20px;
     border-radius: 4px;
@@ -271,7 +279,7 @@ input:checked + .theme-toggle-slider:before {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 14px;
+    font-size: 1rem;
     transition: .4s;
 }
 
